k8s/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
spec:
  finalizers:
    - "kubernetes"
