k8s/registry/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-registry
  labels:
    app: my-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-registry
  template:
    metadata:
      labels:
        app: my-registry
    spec:
      containers:
      - name: my-registry
        image: registry
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: my-registry-pvc
