k8s/registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-registry
  labels:
    run: docker-registry
spec:
  selector:
    app: my-registry
  ports:
    - protocol: TCP
      port: 5000
  type: LoadBalancer
