k8s/registry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: my-registry.${TRAEFIK_LOADBALANCER_IP}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: my-registry
            port: 
             number: 5000
